--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     </style>
 </head>
 <body>
+    <pre>
+1. open your exported file
+2. change frequencies
+3. export it
+4. import to radio
+5. enjoy :)
+    </pre>
     <label for="f" class="btn">Select file</label>
     <input type="file" id="f" class="f">
     <div id="freq">
